tests/specs/check/typecheck_doc_failure/mod.out
Check [WILDCARD]/tests/specs/check/typecheck_doc_failure/mod.ts
Check [WILDCARD]/tests/specs/check/typecheck_doc_failure/mod.ts$2-5.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const sum: string = add(1, 2);
      ~~~
    at [WILDCARD]/tests/specs/check/typecheck_doc_failure/mod.ts$2-5.ts:2:7
