tests/specs/check/typecheck_doc_failure/mod.ts
/**
 * ```ts
 * const sum: string = add(1, 2);
 * ```
 */
export function add(a: number, b: number): number {
  return a + b;
}
